--- a/public/404.html
+++ b/public/404.html
@@ -59,8 +59,10 @@
 
 
 
+
+
   </head>
-  <body class="light-theme">
+  <body class="dark-theme">
     <div class="container">
       <header class="header">
   <span class="header__inner">
