--- a/public/404.html
+++ b/public/404.html
@@ -4,7 +4,7 @@
     
       <title>
         404 Page not found ::
-         — Student &amp; Programmer
+        Andy Sukowski-Bang — Student &amp; Programmer
       </title>
     
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
