--- a/public/pgp/index.html
+++ b/public/pgp/index.html
@@ -4,7 +4,7 @@
     
       <title>
         My public PGP key ::
-         — Student &amp; Programmer
+        Andy Sukowski-Bang — Student &amp; Programmer
       </title>
     
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
