Fix code wrapping

--- a/public/pgp/index.html
+++ b/public/pgp/index.html
@@ -188,8 +188,8 @@
 <a href="mailto:contact@andy-sb.com"><code>contact@andy-sb.com</code></a>. If you want to contact me privately, encrypt your
 message with the public key and I will be the only person able to decrypt it
 using my private key.</p>
-<pre style="height: 28rem; margin: 2rem 0;">
------BEGIN PGP PUBLIC KEY BLOCK-----
+<pre style="height: 28rem; margin: 2rem 0;" tabindex="0">
+<code>-----BEGIN PGP PUBLIC KEY BLOCK-----
 
 mQINBGF7CGcBEADUTFsJ+cNo+83XyaTDvDyxorljK/e2j5N2YZ5/7qK3Q+7+evyk
 qZUJpSzEJJ9QP3C3CSVu1fzu/T3wgOnufiQ+vfbbpre9YaagRbEQVLKQadYyvX+A
@@ -279,7 +279,7 @@ HWwb+4W2Z6R+EBxKiwzwhQQ+dan4JaS0yC8ydX08RGZ3pEZDm+Othn+gXBKSCUoy
 NIbTkN1xAHYmKcyuLntRROflbIqgyvN8jXCV6jCL7hsd5JI4RIf258HcuX4k+2dV
 DMdsq1JhSkUoF6rWGTYmKSDdVoKBTg==
 =bUUo
------END PGP PUBLIC KEY BLOCK-----
+-----END PGP PUBLIC KEY BLOCK-----</code>
 </pre>
 <p>It is also available in RAW format at <a href="/pgp.txt">andy-sb.com/pgp.txt</a> and can be cross
 checked with <a href="https://gitlab.com/andy-sb.gpg">my PGP key on GitLab</a> and the <a href="https://keys.openpgp.org">keys.openpgp.org</a> keyserver.
