Add posts/networking.md and rename resume.pdf to cv.pdf

--- a/public/index.html
+++ b/public/index.html
@@ -168,7 +168,7 @@
 of mathematics and computer science, including machine learning, cryptography
 and decentralized networking. Starting in October this year, I will pursue a
 degree in mathematics at the <a href="https://www.uni-kiel.de">CAU in Kiel</a>. In my free time I go bouldering,
-play electric guitar or develop software in C, Julia or Haskell (check out <a href="/resume.pdf">my
+play electric guitar or develop software in C, Julia or Haskell (check out <a href="/cv.pdf">my
 résumé</a> and <a href="https://gitlab.com/andy-sb">my GitLab</a>).</p>
 <div  style="margin-top: 1.6rem;" >
     <div style="text-align: center;">
