Add posts/networking.md and update cv.pdf

--- a/public/index.html
+++ b/public/index.html
@@ -253,6 +253,9 @@ frequently use Neovim, ffmpeg, ImageMagick, GnuPG, <a href="https://www.password
   <img src="/img/linux_system.png"  alt="Void Linux with DWM, LunarVim, HTOP and neofetch, Gruvbox Material theme"  class="left"  />
 
 
+  <p style="text-align: center;">Void Linux with DWM using Gruvbox Material</p>
+
+
 
 	</div>
 </article>
