Use system theme by default

--- a/public/xmr/index.html
+++ b/public/xmr/index.html
@@ -69,7 +69,7 @@ Dynamic block sizes ensure low transaction fees, the RandomX proof-of-work algor
 
 
   </head>
-  <body class="dark-theme">
+  <body >
     <div class="container">
       <header class="header">
   <span class="header__inner">
