--- a/public/pgp/index.html
+++ b/public/pgp/index.html
@@ -69,7 +69,7 @@
 
 
   </head>
-  <body class="dark-theme">
+  <body >
     <div class="container">
       <header class="header">
   <span class="header__inner">
