Forgot to build site

--- a/public/index.html
+++ b/public/index.html
@@ -263,7 +263,7 @@ compile programs) and finally to Void Linux. I&rsquo;ve used Gnome, KDE, qtile, 
 now DWM from <a href="https://suckless.org">suckless.org</a>. My workflow is primarily command-line based, so I
 frequently use Neovim, ffmpeg, ImageMagick, GnuPG, <a href="https://www.passwordstore.org/">pass</a> and the *nix coreutils.</p>
 
-  <img src="/img/linux_system.png"  alt="Void Linux with DWM, LunarVim, HTOP and neofetch, Gruvbox Material theme"  class="left"  />
+  <img src="/img/linux_system.webp"  alt="Void Linux with DWM, LunarVim, HTOP and neofetch, Gruvbox Material theme"  class="left"  />
 
 
   <p style="text-align: center;">Void Linux with DWM using Gruvbox Material</p>
