--- a/public/index.html
+++ b/public/index.html
@@ -252,6 +252,19 @@ free.</p>
     </a>
   </div>
 
+
+
+  <div class="repo">
+    <a class="repo-link" href="https://gitlab.com/andy-sb/waves">
+      <img alt="IMG" class="repo-img" src="/img/repo/waves.webp" width="50" height="50">
+      <div class="repo-info">
+        <h4 class="repo-name">Wave Simulator</h4>
+      <p class="repo-desc">An n-dimensional wave simulator, written in Julia.</p>
+      </div>
+      <svg xmlns="http://www.w3.org/2000/svg" width=24 height=24 viewBox="0 0 24 24" fill="var(--color)"><path d="M5 13h11.86l-3.63 4.36a1 1 0 0 0 1.54 1.28l5-6a1.19 1.19 0 0 0 .09-.15c0-.05.05-.08.07-.13A1 1 0 0 0 20 12a1 1 0 0 0-.07-.36c0-.05-.05-.08-.07-.13a1.19 1.19 0 0 0-.09-.15l-5-6a1 1 0 0 0-1.41-.13 1 1 0 0 0-.13 1.41L16.86 11H5a1 1 0 0 0 0 2z"/></svg>
+    </a>
+  </div>
+
 </p>
 <h2 id="my-linux-setup">
   My Linux Setup
