Change repository links to https://git.andy-sb.com/<repo>

--- a/public/index.html
+++ b/public/index.html
@@ -190,7 +190,7 @@ what you see and are absolutely dying to <a href="/xmr">send me some Monero (XMR
 free.</p>
 <p>
   <div class="repo">
-    <a class="repo-link" href="https://gitlab.com/andy-sb/cnn">
+    <a class="repo-link" href="https://git.andy-sb.com/cnn">
       <img alt="IMG" class="repo-img" src="/img/repo/cnn.webp" width="50" height="50">
       <div class="repo-info">
         <h4 class="repo-name">Convolutional Neural Network</h4>
@@ -203,11 +203,11 @@ free.</p>
 
 
   <div class="repo">
-    <a class="repo-link" href="https://gitlab.com/andy-sb/nn">
-      <img alt="IMG" class="repo-img" src="/img/repo/nn.webp" width="50" height="50">
+    <a class="repo-link" href="https://git.andy-sb.com/mlp">
+      <img alt="IMG" class="repo-img" src="/img/repo/mlp.webp" width="50" height="50">
       <div class="repo-info">
-        <h4 class="repo-name">Neural Network</h4>
-      <p class="repo-desc">A simple artificial neural network, specifically a multilayer perceptron (MLP), written from scratch in Julia.</p>
+        <h4 class="repo-name">Multilayer Perceptron</h4>
+      <p class="repo-desc">A simple multilayer perceptron (MLP), also known as a fully connected feedforward artificial neural network, written from scratch in Julia.</p>
       </div>
       <svg xmlns="http://www.w3.org/2000/svg" width=24 height=24 viewBox="0 0 24 24" fill="var(--color)"><path d="M5 13h11.86l-3.63 4.36a1 1 0 0 0 1.54 1.28l5-6a1.19 1.19 0 0 0 .09-.15c0-.05.05-.08.07-.13A1 1 0 0 0 20 12a1 1 0 0 0-.07-.36c0-.05-.05-.08-.07-.13a1.19 1.19 0 0 0-.09-.15l-5-6a1 1 0 0 0-1.41-.13 1 1 0 0 0-.13 1.41L16.86 11H5a1 1 0 0 0 0 2z"/></svg>
     </a>
@@ -216,7 +216,7 @@ free.</p>
 
 
   <div class="repo">
-    <a class="repo-link" href="https://gitlab.com/andy-sb/ffn">
+    <a class="repo-link" href="https://git.andy-sb.com/ffn">
       <img alt="IMG" class="repo-img" src="/img/repo/ffn.webp" width="50" height="50">
       <div class="repo-info">
         <h4 class="repo-name">Fourier Feature Network</h4>
@@ -229,7 +229,7 @@ free.</p>
 
 
   <div class="repo">
-    <a class="repo-link" href="https://gitlab.com/andy-sb/steg">
+    <a class="repo-link" href="https://git.andy-sb.com/steg">
       <img alt="IMG" class="repo-img" src="/img/repo/steg.webp" width="50" height="50">
       <div class="repo-info">
         <h4 class="repo-name">Steganography</h4>
@@ -242,7 +242,7 @@ free.</p>
 
 
   <div class="repo">
-    <a class="repo-link" href="https://gitlab.com/andy-sb/calc">
+    <a class="repo-link" href="https://git.andy-sb.com/calc">
       <img alt="IMG" class="repo-img" src="/img/repo/calc.webp" width="50" height="50">
       <div class="repo-info">
         <h4 class="repo-name">Calculator</h4>
@@ -255,7 +255,7 @@ free.</p>
 
 
   <div class="repo">
-    <a class="repo-link" href="https://gitlab.com/andy-sb/brain">
+    <a class="repo-link" href="https://git.andy-sb.com/brain">
       <img alt="IMG" class="repo-img" src="/img/repo/brain.webp" width="50" height="50">
       <div class="repo-info">
         <h4 class="repo-name">Brainfuck Interpreter</h4>
@@ -268,7 +268,7 @@ free.</p>
 
 
   <div class="repo">
-    <a class="repo-link" href="https://gitlab.com/andy-sb/waves">
+    <a class="repo-link" href="https://git.andy-sb.com/waves">
       <img alt="IMG" class="repo-img" src="/img/repo/waves.webp" width="50" height="50">
       <div class="repo-info">
         <h4 class="repo-name">Wave Simulator</h4>
